asyncgit/src/lib/tui/git/tests/snapshots/gnostr_asyncgit__tui__git__tests__new_commit.snap
---
source: asyncgit/src/lib/tui/git/tests/mod.rs
assertion_line: 227
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch is ahead of 'origin/main' by 1 commit.                             |
                                                                                |
 Recent commits                                                                 |
 e7eb2bd main add new-file                                                      |
 b66a0bf origin/main add initial-file                                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: d40283e3b99b6eb1
