asyncgit/src/lib/tui/git/tests/snapshots/gnostr_asyncgit__tui__git__tests__no_repo.snap
---
source: asyncgit/src/lib/tui/git/tests/mod.rs
assertion_line: 43
expression: ctx.redact_buffer()
---
▌No branch                                                                      |
                                                                                |
 Recent commits                                                                 |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: bc670d3bb6a7cf9a
