asyncgit/src/lib/tui/git/tests/snapshots/gnostr_asyncgit__tui__git__tests__rebase_conflict.snap
---
source: asyncgit/src/lib/tui/git/tests/mod.rs
assertion_line: 134
expression: ctx.redact_buffer()
---
▌Rebasing other-branch onto main                                                |
                                                                                |
 Unstaged changes (1)                                                           |
 unmerged   new-file…                                                           |
                                                                                |
 Staged changes (1)                                                             |
 unmerged   new-file…                                                           |
                                                                                |
 Recent commits                                                                 |
 ed5ed59 main modify new-file                                                   |
 46c81ca add new-file                                                           |
 b66a0bf origin/main add initial-file                                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 14c8af588de8e27f
