asyncgit/src/lib/tui/git/tests/snapshots/gnostr_asyncgit__tui__git__tests__revert_abort.snap
---
source: asyncgit/src/lib/tui/git/tests/mod.rs
assertion_line: 177
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch is ahead of 'origin/main' by 2 commit.                             |
                                                                                |
 Recent commits                                                                 |
 7294ba4 main modify new-file                                                   |
 57409cb add new-file                                                           |
 b66a0bf origin/main add initial-file                                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git revert --abort                                                            |
styles_hash: 8a22cddba91f2be
