asyncgit/src/lib/tui/git/tests/snapshots/gnostr_asyncgit__tui__git__tests__revert_commit.snap
---
source: asyncgit/src/lib/tui/git/tests/mod.rs
assertion_line: 195
expression: ctx.redact_buffer()
---
▌6324471 main Revert "add initial-file"                                         |
 b66a0bf origin/main add initial-file                                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git revert --edit --no-edit b66a0bf82020d6a386e94d0fceedec1f817d20c7          |
styles_hash: 9fae57feca90a6d2
