asyncgit/src/lib/tui/git/tests/snapshots/gnostr_asyncgit__tui__git__tests__revert_commit_prompt.snap
---
source: asyncgit/src/lib/tui/git/tests/mod.rs
assertion_line: 189
expression: ctx.redact_buffer()
---
▌b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
? Revert commit (default b66a0bf82020d6a386e94d0fceedec1f817d20c7): ›           |
styles_hash: 78116180725b01d8
