asyncgit/src/lib/tui/git/tests/snapshots/gnostr_asyncgit__tui__git__tests__revert_conflict.snap
---
source: asyncgit/src/lib/tui/git/tests/mod.rs
assertion_line: 166
expression: ctx.redact_buffer()
---
▌Reverting 57409cb                                                              |
                                                                                |
 Unstaged changes (1)                                                           |
 unmerged   new-file…                                                           |
                                                                                |
 Staged changes (1)                                                             |
 unmerged   new-file…                                                           |
                                                                                |
 Recent commits                                                                 |
 7294ba4 main modify new-file                                                   |
 57409cb add new-file                                                           |
 b66a0bf origin/main add initial-file                                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 14c8af588de8e27f
