asyncgit/src/lib/tui/git/tests/snapshots/gnostr_asyncgit__tui__git__tests__revert_menu.snap
---
source: asyncgit/src/lib/tui/git/tests/mod.rs
assertion_line: 183
expression: ctx.redact_buffer()
---
▌b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
Revert                  Arguments                                               |
a Abort                 -e Edit commit message (--edit)                         |
c Continue              -E Don't edit commit message (--no-edit)                |
V Revert commit(s)      -s Add Signed-off-by lines (--signoff)                  |
q/<esc> Quit/Close                                                              |
styles_hash: f7fbb78008d07bf9
