asyncgit/src/lib/tui/git/tests/snapshots/gnostr_asyncgit__tui__git__tests__show.snap
---
source: asyncgit/src/lib/tui/git/tests/mod.rs
assertion_line: 116
expression: ctx.redact_buffer()
---
 commit cd0a1c1f653ae15d2b920922e04046a2453d2afb                                |
 Author: Author Name <author@email.com>                                         |
 Date:   Fri, 16 Feb 2024 11:11:00 +0100                                        |
                                                                                |
     add firstfile                                                              |
                                                                                |
     Commit body goes here                                                      |
                                                                                |
 added      firstfile                                                           |
▌@@ -0,0 +1 @@                                                                  |
▌+This should be visible                                                        |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 4f7a8fcd217ee770
