asyncgit/src/lib/tui/git/tests/snapshots/gnostr_asyncgit__tui__git__tests__syntax_highlighted.snap
---
source: asyncgit/src/lib/tui/git/tests/mod.rs
assertion_line: 331
expression: ctx.redact_buffer()
---
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 355101d0bd329837
